// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Produce topic shortcut should render a shortcuts table with prefix rule variation 1`] = `
<body>
  <div>
    <table
      class="pf-c-table pf-m-grid-md pf-m-compact"
      data-ouia-component-id="OUIA-Generated-Table-2"
      data-ouia-component-type="PF4/Table"
      data-ouia-safe="true"
      role="grid"
      style=""
    >
      <thead
        class=""
      >
        <tr
          class=""
          data-ouia-component-id="OUIA-Generated-TableRow-3"
          data-ouia-component-type="PF4/TableRow"
          data-ouia-safe="true"
        >
          <th
            class=""
            scope="col"
          >
            Resource
          </th>
          <th
            class=""
          />
          <th
            class=""
          />
          <th
            class=""
            scope="col"
          >
            Permission
          </th>
          <th
            class=""
          />
          <th
            class=""
          />
        </tr>
      </thead>
      <tbody
        class=""
        role="rowgroup"
      >
        <tr
          class=""
          data-ouia-component-id="OUIA-Generated-TableRow-4"
          data-ouia-component-type="PF4/TableRow"
          data-ouia-safe="true"
        >
          <td
            class=""
            colspan="5"
          >
            <h6
              class="pf-c-title pf-m-md"
              data-ouia-component-id="OUIA-Generated-Title-2"
              data-ouia-component-type="PF4/Title"
              data-ouia-safe="true"
            >
              Produce to a topic
               
              <button
                class="pf-c-form__group-label-help"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  viewBox="0 0 1024 1024"
                  width="1em"
                >
                  <path
                    d="M521.3,576 C627.5,576 713.7,502 713.7,413.7 C713.7,325.4 627.6,253.6 521.3,253.6 C366,253.6 334.5,337.7 329.2,407.2 C329.2,414.3 335.2,416 343.5,416 L445,416 C450.5,416 458,415.5 460.8,406.5 C460.8,362.6 582.9,357.1 582.9,413.6 C582.9,441.9 556.2,470.9 521.3,473 C486.4,475.1 447.3,479.8 447.3,521.7 L447.3,553.8 C447.3,570.8 456.1,576 472,576 C487.9,576 521.3,576 521.3,576 M575.3,751.3 L575.3,655.3 C575.313862,651.055109 573.620137,646.982962 570.6,644 C567.638831,640.947672 563.552355,639.247987 559.3,639.29884 L463.3,639.29884 C459.055109,639.286138 454.982962,640.979863 452,644 C448.947672,646.961169 447.247987,651.047645 447.29884,655.3 L447.29884,751.3 C447.286138,755.544891 448.979863,759.617038 452,762.6 C454.961169,765.652328 459.047645,767.352013 463.3,767.30116 L559.3,767.30116 C563.544891,767.313862 567.617038,765.620137 570.6,762.6 C573.659349,759.643612 575.360354,755.553963 575.3,751.3 M512,896 C300.2,896 128,723.9 128,512 C128,300.3 300.2,128 512,128 C723.8,128 896,300.2 896,512 C896,723.8 723.7,896 512,896 M512.1,0 C229.7,0 0,229.8 0,512 C0,794.2 229.8,1024 512.1,1024 C794.4,1024 1024,794.3 1024,512 C1024,229.7 794.4,0 512.1,0"
                  />
                </svg>
              </button>
            </h6>
          </td>
          <td
            class=""
          >
            <button
              aria-disabled="false"
              aria-label="produce-topic-delete"
              class="pf-c-button pf-m-link"
              data-ouia-component-id="OUIA-Generated-Button-link-2"
              data-ouia-component-type="PF4/Button"
              data-ouia-safe="true"
              type="button"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                height="1em"
                role="img"
                style="vertical-align: -0.125em;"
                viewBox="0 0 448 512"
                width="1em"
              >
                <path
                  d="M432 32H312l-9.4-18.7A24 24 0 0 0 281.1 0H166.8a23.72 23.72 0 0 0-21.4 13.3L136 32H16A16 16 0 0 0 0 48v32a16 16 0 0 0 16 16h416a16 16 0 0 0 16-16V48a16 16 0 0 0-16-16zM53.2 467a48 48 0 0 0 47.9 45h245.8a48 48 0 0 0 47.9-45L416 128H32z"
                />
              </svg>
            </button>
          </td>
        </tr>
        <tr
          class=""
          data-ouia-component-id="OUIA-Generated-TableRow-5"
          data-ouia-component-type="PF4/TableRow"
          data-ouia-safe="true"
        >
          <td
            class=""
          >
             
            <span
              class="pf-c-label pf-m-blue mas-m-solid"
            >
              <span
                class="pf-c-label__content"
              >
                T
              </span>
            </span>
             
            Topic
             
          </td>
          <td
            class=""
          >
            <div
              class="pf-c-select"
              data-ouia-component-id="OUIA-Generated-Select-single-2"
              data-ouia-component-type="PF4/Select"
              data-ouia-safe="true"
              style="width: 150px;"
            >
              <button
                aria-expanded="false"
                aria-haspopup="listbox"
                aria-label="Options menu"
                aria-labelledby=" pf-select-toggle-id-2"
                class="pf-c-select__toggle"
                id="pf-select-toggle-id-2"
                type="button"
              >
                <div
                  class="pf-c-select__toggle-wrapper"
                >
                  <span
                    class="pf-c-select__toggle-text"
                  >
                    Is
                  </span>
                </div>
                <span
                  class="pf-c-select__toggle-arrow"
                >
                  <svg
                    aria-hidden="true"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    style="vertical-align: -0.125em;"
                    viewBox="0 0 320 512"
                    width="1em"
                  >
                    <path
                      d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                    />
                  </svg>
                </span>
              </button>
            </div>
          </td>
          <td
            class=""
          >
            <div
              class="pf-c-form__group"
            >
              <div
                class="pf-c-form__group-control"
              >
                <div
                  aria-describedby="resource-name"
                  class="pf-c-select"
                  data-ouia-component-id="OUIA-Generated-Select-typeahead-2"
                  data-ouia-component-type="PF4/Select"
                  data-ouia-safe="true"
                  style="width: 170px;"
                >
                  <div
                    class="pf-c-select__toggle pf-m-typeahead"
                  >
                    <div
                      class="pf-c-select__toggle-wrapper"
                    >
                      <input
                        aria-label="topic name"
                        autocomplete="off"
                        class="pf-c-form-control pf-c-select__toggle-typeahead"
                        id="pf-select-toggle-id-3-select-typeahead"
                        placeholder="Enter name"
                        type="text"
                        value=""
                      />
                    </div>
                    <button
                      aria-expanded="false"
                      aria-haspopup="listbox"
                      aria-label="Options menu"
                      aria-labelledby=" pf-select-toggle-id-3"
                      class="pf-c-button pf-c-select__toggle-button pf-m-plain"
                      id="pf-select-toggle-id-3"
                      tabindex="-1"
                      type="button"
                    >
                      <svg
                        aria-hidden="true"
                        class="pf-c-select__toggle-arrow"
                        fill="currentColor"
                        height="1em"
                        role="img"
                        style="vertical-align: -0.125em;"
                        viewBox="0 0 320 512"
                        width="1em"
                      >
                        <path
                          d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                        />
                      </svg>
                    </button>
                  </div>
                </div>
                
              </div>
            </div>
          </td>
          <td
            class=""
            colspan="2"
          >
            <div
              class="pf-c-label-group"
            >
              <div
                class="pf-c-label-group__main"
              >
                
                <ul
                  aria-label="Label group category"
                  class="pf-c-label-group__list"
                  role="list"
                >
                  <li
                    class="pf-c-label-group__list-item"
                  >
                    <span
                      class="pf-c-label pf-m-outline"
                    >
                      <span
                        class="pf-c-label__content"
                      >
                        Allow
                      </span>
                    </span>
                  </li>
                  <li
                    class="pf-c-label-group__list-item"
                  >
                    <span
                      class="pf-c-label pf-m-outline"
                    >
                      <span
                        class="pf-c-label__content"
                      >
                        Write
                      </span>
                    </span>
                  </li>
                  <li
                    class="pf-c-label-group__list-item"
                  >
                    <span
                      class="pf-c-label pf-m-outline"
                    >
                      <span
                        class="pf-c-label__content"
                      >
                        Create
                      </span>
                    </span>
                  </li>
                  <li
                    class="pf-c-label-group__list-item"
                  >
                    <button
                      class="pf-c-label pf-m-overflow"
                    >
                      <span
                        class="pf-c-label__content"
                      >
                        1 more
                      </span>
                    </button>
                  </li>
                </ul>
              </div>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <div>
    <ul
      aria-atomic="false"
      aria-live="polite"
      class="pf-c-alert-group pf-m-toast"
    />
  </div>
</body>
`;

exports[`Produce topic shortcut should render a shortcuts table with table header 1`] = `
<body>
  <div>
    <table
      class="pf-c-table pf-m-grid-md pf-m-compact"
      data-ouia-component-id="OUIA-Generated-Table-3"
      data-ouia-component-type="PF4/Table"
      data-ouia-safe="true"
      role="grid"
      style=""
    >
      <thead
        class=""
      >
        <tr
          class=""
          data-ouia-component-id="OUIA-Generated-TableRow-6"
          data-ouia-component-type="PF4/TableRow"
          data-ouia-safe="true"
        >
          <th
            class=""
            scope="col"
          >
            Resource
          </th>
          <th
            class=""
          />
          <th
            class=""
          />
          <th
            class=""
            scope="col"
          >
            Permission
          </th>
          <th
            class=""
          />
          <th
            class=""
          />
        </tr>
      </thead>
      <tbody
        class=""
        role="rowgroup"
      >
        <tr
          class=""
          data-ouia-component-id="OUIA-Generated-TableRow-7"
          data-ouia-component-type="PF4/TableRow"
          data-ouia-safe="true"
        >
          <td
            class=""
            colspan="5"
          >
            <h6
              class="pf-c-title pf-m-md"
              data-ouia-component-id="OUIA-Generated-Title-3"
              data-ouia-component-type="PF4/Title"
              data-ouia-safe="true"
            >
              Produce to a topic
               
              <button
                class="pf-c-form__group-label-help"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  viewBox="0 0 1024 1024"
                  width="1em"
                >
                  <path
                    d="M521.3,576 C627.5,576 713.7,502 713.7,413.7 C713.7,325.4 627.6,253.6 521.3,253.6 C366,253.6 334.5,337.7 329.2,407.2 C329.2,414.3 335.2,416 343.5,416 L445,416 C450.5,416 458,415.5 460.8,406.5 C460.8,362.6 582.9,357.1 582.9,413.6 C582.9,441.9 556.2,470.9 521.3,473 C486.4,475.1 447.3,479.8 447.3,521.7 L447.3,553.8 C447.3,570.8 456.1,576 472,576 C487.9,576 521.3,576 521.3,576 M575.3,751.3 L575.3,655.3 C575.313862,651.055109 573.620137,646.982962 570.6,644 C567.638831,640.947672 563.552355,639.247987 559.3,639.29884 L463.3,639.29884 C459.055109,639.286138 454.982962,640.979863 452,644 C448.947672,646.961169 447.247987,651.047645 447.29884,655.3 L447.29884,751.3 C447.286138,755.544891 448.979863,759.617038 452,762.6 C454.961169,765.652328 459.047645,767.352013 463.3,767.30116 L559.3,767.30116 C563.544891,767.313862 567.617038,765.620137 570.6,762.6 C573.659349,759.643612 575.360354,755.553963 575.3,751.3 M512,896 C300.2,896 128,723.9 128,512 C128,300.3 300.2,128 512,128 C723.8,128 896,300.2 896,512 C896,723.8 723.7,896 512,896 M512.1,0 C229.7,0 0,229.8 0,512 C0,794.2 229.8,1024 512.1,1024 C794.4,1024 1024,794.3 1024,512 C1024,229.7 794.4,0 512.1,0"
                  />
                </svg>
              </button>
            </h6>
          </td>
          <td
            class=""
          >
            <button
              aria-disabled="false"
              aria-label="produce-topic-delete"
              class="pf-c-button pf-m-link"
              data-ouia-component-id="OUIA-Generated-Button-link-3"
              data-ouia-component-type="PF4/Button"
              data-ouia-safe="true"
              type="button"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                height="1em"
                role="img"
                style="vertical-align: -0.125em;"
                viewBox="0 0 448 512"
                width="1em"
              >
                <path
                  d="M432 32H312l-9.4-18.7A24 24 0 0 0 281.1 0H166.8a23.72 23.72 0 0 0-21.4 13.3L136 32H16A16 16 0 0 0 0 48v32a16 16 0 0 0 16 16h416a16 16 0 0 0 16-16V48a16 16 0 0 0-16-16zM53.2 467a48 48 0 0 0 47.9 45h245.8a48 48 0 0 0 47.9-45L416 128H32z"
                />
              </svg>
            </button>
          </td>
        </tr>
        <tr
          class=""
          data-ouia-component-id="OUIA-Generated-TableRow-8"
          data-ouia-component-type="PF4/TableRow"
          data-ouia-safe="true"
        >
          <td
            class=""
          >
             
            <span
              class="pf-c-label pf-m-blue mas-m-solid"
            >
              <span
                class="pf-c-label__content"
              >
                T
              </span>
            </span>
             
            Topic
             
          </td>
          <td
            class=""
          >
            <div
              class="pf-c-select"
              data-ouia-component-id="OUIA-Generated-Select-single-3"
              data-ouia-component-type="PF4/Select"
              data-ouia-safe="true"
              style="width: 150px;"
            >
              <button
                aria-expanded="false"
                aria-haspopup="listbox"
                aria-label="Options menu"
                aria-labelledby=" pf-select-toggle-id-4"
                class="pf-c-select__toggle"
                id="pf-select-toggle-id-4"
                type="button"
              >
                <div
                  class="pf-c-select__toggle-wrapper"
                >
                  <span
                    class="pf-c-select__toggle-text"
                  >
                    Starts with
                  </span>
                </div>
                <span
                  class="pf-c-select__toggle-arrow"
                >
                  <svg
                    aria-hidden="true"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    style="vertical-align: -0.125em;"
                    viewBox="0 0 320 512"
                    width="1em"
                  >
                    <path
                      d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                    />
                  </svg>
                </span>
              </button>
            </div>
          </td>
          <td
            class=""
          >
            <div
              class="pf-c-form__group"
            >
              <div
                class="pf-c-form__group-control"
              >
                <div
                  aria-describedby="resource-name"
                  class="pf-c-select"
                  data-ouia-component-id="OUIA-Generated-Select-typeahead-3"
                  data-ouia-component-type="PF4/Select"
                  data-ouia-safe="true"
                  style="width: 170px;"
                >
                  <div
                    class="pf-c-select__toggle pf-m-typeahead"
                  >
                    <div
                      class="pf-c-select__toggle-wrapper"
                    >
                      <input
                        aria-label="topic prefix"
                        autocomplete="off"
                        class="pf-c-form-control pf-c-select__toggle-typeahead"
                        id="pf-select-toggle-id-5-select-typeahead"
                        placeholder="Enter prefix"
                        type="text"
                        value=""
                      />
                    </div>
                    <button
                      aria-expanded="false"
                      aria-haspopup="listbox"
                      aria-label="Options menu"
                      aria-labelledby=" pf-select-toggle-id-5"
                      class="pf-c-button pf-c-select__toggle-button pf-m-plain"
                      id="pf-select-toggle-id-5"
                      tabindex="-1"
                      type="button"
                    >
                      <svg
                        aria-hidden="true"
                        class="pf-c-select__toggle-arrow"
                        fill="currentColor"
                        height="1em"
                        role="img"
                        style="vertical-align: -0.125em;"
                        viewBox="0 0 320 512"
                        width="1em"
                      >
                        <path
                          d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                        />
                      </svg>
                    </button>
                  </div>
                </div>
                
              </div>
            </div>
          </td>
          <td
            class=""
            colspan="2"
          >
            <div
              class="pf-c-label-group"
            >
              <div
                class="pf-c-label-group__main"
              >
                
                <ul
                  aria-label="Label group category"
                  class="pf-c-label-group__list"
                  role="list"
                >
                  <li
                    class="pf-c-label-group__list-item"
                  >
                    <span
                      class="pf-c-label pf-m-outline"
                    >
                      <span
                        class="pf-c-label__content"
                      >
                        Allow
                      </span>
                    </span>
                  </li>
                  <li
                    class="pf-c-label-group__list-item"
                  >
                    <span
                      class="pf-c-label pf-m-outline"
                    >
                      <span
                        class="pf-c-label__content"
                      >
                        Write
                      </span>
                    </span>
                  </li>
                  <li
                    class="pf-c-label-group__list-item"
                  >
                    <span
                      class="pf-c-label pf-m-outline"
                    >
                      <span
                        class="pf-c-label__content"
                      >
                        Create
                      </span>
                    </span>
                  </li>
                  <li
                    class="pf-c-label-group__list-item"
                  >
                    <button
                      class="pf-c-label pf-m-overflow"
                    >
                      <span
                        class="pf-c-label__content"
                      >
                        1 more
                      </span>
                    </button>
                  </li>
                </ul>
              </div>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <div>
    <ul
      aria-atomic="false"
      aria-live="polite"
      class="pf-c-alert-group pf-m-toast"
    />
  </div>
</body>
`;

exports[`Produce topic shortcut should render a shortcuts table without a header 1`] = `
<body>
  <div>
    <table
      class="pf-c-table pf-m-grid-md pf-m-compact"
      data-ouia-component-id="OUIA-Generated-Table-1"
      data-ouia-component-type="PF4/Table"
      data-ouia-safe="true"
      role="grid"
      style=""
    >
      <tbody
        class=""
        role="rowgroup"
      >
        <tr
          class=""
          data-ouia-component-id="OUIA-Generated-TableRow-1"
          data-ouia-component-type="PF4/TableRow"
          data-ouia-safe="true"
        >
          <td
            class=""
            colspan="5"
          >
            <h6
              class="pf-c-title pf-m-md"
              data-ouia-component-id="OUIA-Generated-Title-1"
              data-ouia-component-type="PF4/Title"
              data-ouia-safe="true"
            >
              Produce to a topic
               
              <button
                class="pf-c-form__group-label-help"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  viewBox="0 0 1024 1024"
                  width="1em"
                >
                  <path
                    d="M521.3,576 C627.5,576 713.7,502 713.7,413.7 C713.7,325.4 627.6,253.6 521.3,253.6 C366,253.6 334.5,337.7 329.2,407.2 C329.2,414.3 335.2,416 343.5,416 L445,416 C450.5,416 458,415.5 460.8,406.5 C460.8,362.6 582.9,357.1 582.9,413.6 C582.9,441.9 556.2,470.9 521.3,473 C486.4,475.1 447.3,479.8 447.3,521.7 L447.3,553.8 C447.3,570.8 456.1,576 472,576 C487.9,576 521.3,576 521.3,576 M575.3,751.3 L575.3,655.3 C575.313862,651.055109 573.620137,646.982962 570.6,644 C567.638831,640.947672 563.552355,639.247987 559.3,639.29884 L463.3,639.29884 C459.055109,639.286138 454.982962,640.979863 452,644 C448.947672,646.961169 447.247987,651.047645 447.29884,655.3 L447.29884,751.3 C447.286138,755.544891 448.979863,759.617038 452,762.6 C454.961169,765.652328 459.047645,767.352013 463.3,767.30116 L559.3,767.30116 C563.544891,767.313862 567.617038,765.620137 570.6,762.6 C573.659349,759.643612 575.360354,755.553963 575.3,751.3 M512,896 C300.2,896 128,723.9 128,512 C128,300.3 300.2,128 512,128 C723.8,128 896,300.2 896,512 C896,723.8 723.7,896 512,896 M512.1,0 C229.7,0 0,229.8 0,512 C0,794.2 229.8,1024 512.1,1024 C794.4,1024 1024,794.3 1024,512 C1024,229.7 794.4,0 512.1,0"
                  />
                </svg>
              </button>
            </h6>
          </td>
          <td
            class=""
          >
            <button
              aria-disabled="false"
              aria-label="produce-topic-delete"
              class="pf-c-button pf-m-link"
              data-ouia-component-id="OUIA-Generated-Button-link-1"
              data-ouia-component-type="PF4/Button"
              data-ouia-safe="true"
              type="button"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                height="1em"
                role="img"
                style="vertical-align: -0.125em;"
                viewBox="0 0 448 512"
                width="1em"
              >
                <path
                  d="M432 32H312l-9.4-18.7A24 24 0 0 0 281.1 0H166.8a23.72 23.72 0 0 0-21.4 13.3L136 32H16A16 16 0 0 0 0 48v32a16 16 0 0 0 16 16h416a16 16 0 0 0 16-16V48a16 16 0 0 0-16-16zM53.2 467a48 48 0 0 0 47.9 45h245.8a48 48 0 0 0 47.9-45L416 128H32z"
                />
              </svg>
            </button>
          </td>
        </tr>
        <tr
          class=""
          data-ouia-component-id="OUIA-Generated-TableRow-2"
          data-ouia-component-type="PF4/TableRow"
          data-ouia-safe="true"
        >
          <td
            class=""
          >
             
            <span
              class="pf-c-label pf-m-blue mas-m-solid"
            >
              <span
                class="pf-c-label__content"
              >
                T
              </span>
            </span>
             
            Topic
             
          </td>
          <td
            class=""
          >
            <div
              class="pf-c-select"
              data-ouia-component-id="OUIA-Generated-Select-single-1"
              data-ouia-component-type="PF4/Select"
              data-ouia-safe="true"
              style="width: 150px;"
            >
              <button
                aria-expanded="false"
                aria-haspopup="listbox"
                aria-label="Options menu"
                aria-labelledby=" pf-select-toggle-id-0"
                class="pf-c-select__toggle"
                id="pf-select-toggle-id-0"
                type="button"
              >
                <div
                  class="pf-c-select__toggle-wrapper"
                >
                  <span
                    class="pf-c-select__toggle-text"
                  >
                    Starts with
                  </span>
                </div>
                <span
                  class="pf-c-select__toggle-arrow"
                >
                  <svg
                    aria-hidden="true"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    style="vertical-align: -0.125em;"
                    viewBox="0 0 320 512"
                    width="1em"
                  >
                    <path
                      d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                    />
                  </svg>
                </span>
              </button>
            </div>
          </td>
          <td
            class=""
          >
            <div
              class="pf-c-form__group"
            >
              <div
                class="pf-c-form__group-control"
              >
                <div
                  aria-describedby="resource-name"
                  class="pf-c-select"
                  data-ouia-component-id="OUIA-Generated-Select-typeahead-1"
                  data-ouia-component-type="PF4/Select"
                  data-ouia-safe="true"
                  style="width: 170px;"
                >
                  <div
                    class="pf-c-select__toggle pf-m-typeahead"
                  >
                    <div
                      class="pf-c-select__toggle-wrapper"
                    >
                      <input
                        aria-label="topic prefix"
                        autocomplete="off"
                        class="pf-c-form-control pf-c-select__toggle-typeahead"
                        id="pf-select-toggle-id-1-select-typeahead"
                        placeholder="Enter prefix"
                        type="text"
                        value=""
                      />
                    </div>
                    <button
                      aria-expanded="false"
                      aria-haspopup="listbox"
                      aria-label="Options menu"
                      aria-labelledby=" pf-select-toggle-id-1"
                      class="pf-c-button pf-c-select__toggle-button pf-m-plain"
                      id="pf-select-toggle-id-1"
                      tabindex="-1"
                      type="button"
                    >
                      <svg
                        aria-hidden="true"
                        class="pf-c-select__toggle-arrow"
                        fill="currentColor"
                        height="1em"
                        role="img"
                        style="vertical-align: -0.125em;"
                        viewBox="0 0 320 512"
                        width="1em"
                      >
                        <path
                          d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                        />
                      </svg>
                    </button>
                  </div>
                </div>
                
              </div>
            </div>
          </td>
          <td
            class=""
            colspan="2"
          >
            <div
              class="pf-c-label-group"
            >
              <div
                class="pf-c-label-group__main"
              >
                
                <ul
                  aria-label="Label group category"
                  class="pf-c-label-group__list"
                  role="list"
                >
                  <li
                    class="pf-c-label-group__list-item"
                  >
                    <span
                      class="pf-c-label pf-m-outline"
                    >
                      <span
                        class="pf-c-label__content"
                      >
                        Allow
                      </span>
                    </span>
                  </li>
                  <li
                    class="pf-c-label-group__list-item"
                  >
                    <span
                      class="pf-c-label pf-m-outline"
                    >
                      <span
                        class="pf-c-label__content"
                      >
                        Write
                      </span>
                    </span>
                  </li>
                  <li
                    class="pf-c-label-group__list-item"
                  >
                    <span
                      class="pf-c-label pf-m-outline"
                    >
                      <span
                        class="pf-c-label__content"
                      >
                        Create
                      </span>
                    </span>
                  </li>
                  <li
                    class="pf-c-label-group__list-item"
                  >
                    <button
                      class="pf-c-label pf-m-overflow"
                    >
                      <span
                        class="pf-c-label__content"
                      >
                        1 more
                      </span>
                    </button>
                  </li>
                </ul>
              </div>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <div>
    <ul
      aria-atomic="false"
      aria-live="polite"
      class="pf-c-alert-group pf-m-toast"
    />
  </div>
</body>
`;
